# MucisSocial

./: .gitignore  ARTIST_INTEGRATION_SUMMARY.md  GATEWAY_ENDPOINTS_CHECK.md  GATEWAY_OVERVIEW.md  MOCK_API_USAGE.md  Makefile  QUICK_START.md  README.md  docker-compose.yml
apps/: docker-compose.yml
apps/player/: Dockerfile  nginx.conf  player.html
apps/web/: Dockerfile  README.md  REQUIRED_API.md  env.example  index.html  nginx.conf  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
infrastructure/: docker-compose.yml
infrastructure/minio/: init-buckets.sh  minio.conf
infrastructure/nginx/: nginx.conf
infrastructure/redpanda/: init-topics.sh
scripts/faker/: README.md  artists.json  create_artists_and_tracks.py
scripts/transdecoder/: main.py  pyproject.toml
services/: README.md  docker-compose.yml
services/CDN/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
services/CDN/api/: router.py
services/CDN/core/: cache.py  config.py
services/CDN/services/: cdn.py
services/artists/: Dockerfile  README.md  go.mod  go.sum
services/artists/cmd/: main.go
services/artists/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql
services/gateway/: .gitignore  API_EXAMPLES.md  Dockerfile  Makefile  QUICK_START.md  README.md  README_SWAGGER.md  SWAGGER_SUMMARY.md  go.mod  go.sum  main.go  models.go
services/mock_api/: Dockerfile  README.md  pyproject.toml
services/mock_api/app/: data.py  main.py
services/mock_api/tests/: test_artists.py  test_cdn.py  test_playlists.py  test_tracks.py  test_users.py
services/playlist/: Dockerfile  Makefile  Readme.md  docker-compose.yml  go.mod  go.sum
services/playlist/api/: playlist.proto
services/streaming/: .gitignore  Dockerfile  README.md  env.example  main.py  player.html  pyproject.toml
services/streaming/api/v1/: router.py
services/streaming/api/v1/endpoints/: origin.py  stream.py
services/streaming/core/: config.py  dependencies.py
services/streaming/schemas/: stream.py  track.py
services/streaming/services/: exceptions.py  signing.py  storage.py  streaming.py  tracks.py
services/streaming/tests/: test_streaming_gateway.py
services/streaming/utils/: playlists.py
services/tracks/: .dockerignore  Dockerfile  Makefile  README.md  apply_migration.sh  docker-compose.yml  go.mod  go.sum
services/transcoder/: Dockerfile  Makefile  README.md  go.mod  go.sum
services/upload/: .gitignore  Dockerfile  Makefile  README.md  go.mod  go.sum
services/users/: .env.example  .gitignore  Dockerfile  Makefile  go.mod
(+171 files in other folders)
